application starts up with one basic user, categroy, and bucket, able to add a new goal to this user

--- a/bucketlist/src/main/resources/application.properties
+++ b/bucketlist/src/main/resources/application.properties
@@ -1,9 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost/bucketlist
+spring.datasource.url=jdbc:mysql://localhost/bucketlist?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=password
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.logging.level.org.hibernate.SQL=debug
 spring.jpa.show-sql=true
-server.port=5000
+spring.jpa.generate-ddl=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
