--- a/bucketlist/build.gradle
+++ b/bucketlist/build.gradle
@@ -4,37 +4,32 @@ plugins {
 }
 
 apply plugin: 'io.spring.dependency-management'
-apply plugin: 'checkstyle'
 
-group = 'com.flow.opal'
+group = 'com.example.bucket.demo'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
-checkstyle {
-    toolVersion "8.18"
-}
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc:2.1.3.RELEASE'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-security'
-    implementation 'io.jsonwebtoken:jjwt:0.2'
+    //implementation 'org.springframework.boot:spring-boot-starter-security'
+    //implementation 'io.jsonwebtoken:jjwt:0.2'
     runtimeOnly 'org.springframework.boot:spring-boot-devtools'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'mysql:mysql-connector-java'
     annotationProcessor 'org.projectlombok:lombok'
-    runtimeOnly('org.postgresql:postgresql')
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
     testImplementation 'org.springframework.security:spring-security-test'
 
     testCompile group: 'com.h2database', name: 'h2', version: '1.4.200'
-    compile("org.springframework.boot:spring-boot-starter-actuator")
+
 
 }
